Add Types.getMethod0()